k8s/base/api-gateway-deployment.yaml
# FILE: k8s/base/api-gateway-deployment.yaml
# PURPOSE: Kubernetes Deployment for the stable api-gateway.

apiVersion: apps/v1
kind: Deployment
metadata: 
  name: api-gateway
  namespace: canary-app
spec: 
  replicas: 1
  selector:
    matchLabels: # must match template.metadata.labels
      app: api-gateway
  template:
    metadata:
      labels: # must match selector.matchLabels
        app: api-gateway
    spec: 
      containers:
        - name: api-gateway
          image: ghcr.io/millera5051/api-gateway:latest # latest will change (just a placeholder)
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          livenessProbe: # is the pod alive?
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe: # is the pod ready to receive traffic? pulls it out of the load balancer if not
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5 # gives uvicorn time to start before K8s starts probing. if too low the pod will get killed before it has a chance to boot
            periodSeconds: 10
